--- a/NewsPortal.Admin/Views/Account/Login.cshtml
+++ b/NewsPortal.Admin/Views/Account/Login.cshtml
@@ -37,45 +37,50 @@
     <!-- Page container -->
     <div class="container">
         <p class="text-center">
-            Welcome to your admin dashboard, please choose an option below:
+            MVC5 Haber Portalı
         </p>
         <div class="login-buttons">
-            <button class="btn btn-login" data-toggle="modal" data-target="#loginModal">Sign in</button>
-            <strong>or</strong>
-            <button class="btn btn-login" data-toggle="modal" data-target="#signUpModal">Sign up</button>
+            <button class="btn btn-login" data-toggle="modal" data-target="#loginModal">Kaydol</button>
+            <!--<strong>or</strong>
+            <button class="btn btn-login" data-toggle="modal" data-target="#signUpModal">Sign up</button>-->
         </div>
     </div>
     <!-- /Page container -->
     <!-- Login modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Please sign in</h4>
-                </div>
-                <div class="modal-body">
-                    <form role="form">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email address" required autofocus>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" required>
-                        </div>
-                        <label class="checkbox">
-                            <input type="checkbox" value="remember-me"> Remember me
-                        </label>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <a href="index-2.html" class="btn btn-primary">Sign in</a>
+    @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Lütfen bilgileri doldurunuz.</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email" required autofocus>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" placeholder="Şifre" required>
+                            </div>
+                            <label class="checkbox">
+                                <input type="checkbox" value="remember-me"> Beni hatırla
+                            </label>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Geri</button>
+                        <a href="index-2.html" class="btn btn-primary">Devam</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    }
     <!-- Sign up modal -->
-    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModal" aria-hidden="true">
+    <!--<div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -104,8 +109,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
+    </div>-->
     <!-- PLUGINS ALL -->
     <script src="~/Scripts/plugins/jquery.min.js"></script>
     <script src="~/Scripts/plugins/modernizr.min.js"></script>
