--- a/NewsPortal.Admin/Views/Account/Login.cshtml
+++ b/NewsPortal.Admin/Views/Account/Login.cshtml
@@ -39,7 +39,9 @@
         <p class="text-center">
             MVC5 Haber Portalı
             <br />
-            @ViewBag.Message
+            <div class="alert text-center" style="border-left:0;">
+                @ViewBag.Message
+            </div>
         </p>
         <div class="login-buttons">
             <button class="btn btn-login" data-toggle="modal" data-target="#loginModal">Giriş Yap</button>
