Views updated for Category

--- a/NewsPortal.Admin/Views/Shared/_Layout.cshtml
+++ b/NewsPortal.Admin/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
     <script src="~/Scripts/page-dashboard.js"></script>
     <!-- Site -->
     <script src="~/Scripts/main.js"></script>
+    <script src="~/Scripts/Global.js"></script>
 </body>
 
 </html>
