--- a/NewsPortal.Admin/Views/Category/Create.cshtml
+++ b/NewsPortal.Admin/Views/Category/Create.cshtml
@@ -1,8 +1,34 @@
 ﻿
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Kategori Ekle";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
-
+<div class="container-fluid">
+    <!-- Basic form -->
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <header class="panel-heading">@ViewBag.Title</header>
+                <div class="panel-body">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Kategori Adı</label>
+                            <input type="text" class="form-control" id="categoryName" placeholder="Kategori Adı">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Url</label>
+                            <input type="text" class="form-control" id="categoryUrl" placeholder="Url">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" checked id="categoryActive"> Aktif Mi?
+                            </label>
+                        </div>
+                        <a href="#" class="btn btn-default" onclick="CreateCategory();">Kaydet</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Basic form -->
+</div>
