Create Category function added to project

--- a/NewsPortal.Admin/Views/Shared/_Layout.cshtml
+++ b/NewsPortal.Admin/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
     <!-- Site -->
     <script src="~/Scripts/main.js"></script>
     <script src="~/Scripts/Global.js"></script>
+    <script src="~/Scripts/bootbox.min.js"></script>
 </body>
 
 </html>
