--- a/NewsPortal.Admin/Views/Category/Create.cshtml
+++ b/NewsPortal.Admin/Views/Category/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model NewsPortal.Data.Model.Category
 @{
     ViewBag.Title = "Kategori Ekle";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,6 +11,10 @@
                 <header class="panel-heading">@ViewBag.Title</header>
                 <div class="panel-body">
                     <form role="form">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Üst Kategori</label>
+                            @Html.DropDownListFor(model => model.Name, new SelectList(ViewBag.Category, "ID", "Name"), ("Seçiniz"), new { @class = "form-control", id = "ParentId" })
+                        </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Kategori Adı</label>
                             <input type="text" class="form-control" id="categoryName" placeholder="Kategori Adı">
