--- a/NewsPortal.Admin/Views/Category/Index.cshtml
+++ b/NewsPortal.Admin/Views/Category/Index.cshtml
@@ -42,9 +42,11 @@
                                             }
                                         <td>@item.User.LastName</td>
                                         <td>
-                                            <button class="btn btn-default btn-sm">Düzenle</button>
+                                            <a href="@Url.Action("Edit", "Category", new { ID = item.ID})" class="btn btn-default btn-sm">Düzenle</a> 
+                                            @*<button class="btn btn-default btn-sm">Düzenle</button>*@
+
                                             @*@Html.ActionLink("Sil", "Delete", new { ID = item.ID }, new { onclick="return confirm('Silmek istediğinize emin misiniz?')" })*@
-                                            <button class="btn btn-default btn-sm" id="deleteCat" onclick="DeleteCategory()" data-id="@item.ID">Sil</button>
+                                            @*<button class="btn btn-default btn-sm" id="deleteCat" onclick="DeleteCategory()" data-id="@item.ID">Sil</button>*@
                                         </td>
                                     </tr>
                                 }
