--- a/NewsPortal.Admin/Views/Shared/_PartialSidebar.cshtml
+++ b/NewsPortal.Admin/Views/Shared/_PartialSidebar.cshtml
@@ -16,6 +16,16 @@
             <div class="sidebar-link-addon"><span class="badge bg-green">NEW</span></div>
         </li>
         <li class="has-submenu">
+            <a href="#"><i class="typcn typcn-news"></i> <span>Haber Yönetimi</span></a>
+            <div class="sidebar-link-addon"><i class="typcn typcn-plus"></i></div>
+            <!-- Sidebar submenu -->
+            <ul class="sidebar-submenu">
+                <li><a href="@Url.Action("Index", "News")">Haber Listesi</a></li>
+                <li><a href="@Url.Action("Create", "News")">Haber Ekle</a></li>
+            </ul>
+            <!-- /Sidebar submenu -->
+        </li>
+        <li class="has-submenu">
             <a href="#"><i class="typcn typcn-tabs-outline"></i> <span>Kategori Yönetimi</span></a>
             <div class="sidebar-link-addon"><i class="typcn typcn-plus"></i></div>
             <!-- Sidebar submenu -->
