Updated category delete func

--- a/NewsPortal.Admin/Views/Category/Create.cshtml
+++ b/NewsPortal.Admin/Views/Category/Create.cshtml
@@ -25,7 +25,7 @@
                         </div>
                         <div class="checkbox">
                             <label>
-                                @Html.CheckBoxFor(x => x.Active, new { @checked = "checked", id = "newsActive" }) Aktif Mi?
+                                @Html.CheckBoxFor(x => x.Active, new { @checked = "checked", id = "categoryActive" }) Aktif Mi?
                             </label>
                         </div>
                         <a href="#" class="btn btn-default" onclick="CreateCategory();">Kaydet</a>
