--- a/NewsPortal.Admin/Views/Shared/_Layout.cshtml
+++ b/NewsPortal.Admin/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
     <script src="~/Scripts/main.js"></script>
     <script src="~/Scripts/Global.js"></script>
     <script src="~/Scripts/bootbox.min.js"></script>
+    <script src="~/Scripts/notify.js"></script>
 </body>
 
 </html>
