--- a/NewsPortal.Admin/Views/News/Create.cshtml
+++ b/NewsPortal.Admin/Views/News/Create.cshtml
@@ -13,10 +13,10 @@
                 <header class="panel-heading">@ViewBag.Title</header>
                 <div class="panel-body">
                     <form role="form">
-                        @*<div class="form-group">
-                                <label for="exampleInputEmail1">Üst Kategori</label>
-                                @Html.DropDownListFor(model => model.Name, new SelectList(ViewBag.Category, "ID", "Name"), ("Seçiniz"), new { @class = "form-control", id = "ParentId" })
-                            </div>*@
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Kategori</label>
+                            @Html.DropDownListFor(model => model.Category.Name, new SelectList(ViewBag.Category, "ID", "Name"), ("Seçiniz"), new { @class = "form-control", id = "ParentId" })
+                        </div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Başlık</label>
                             @Html.TextBoxFor(x => x.Title, new { @class = "form-control", id = "newsTitle", placeholder = "Başlık" })
